// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomList snapshot test 1`] = `
<div
  className="flex gap-2 items-center"
>
  <div>
    Custom list:
  </div>
  <ul
    className="flex gap-1 flex-wrap"
  >
    <li
      className="p-1 px-2 text-[12px] my-4 rounded-2xl bg-themeBlue text-center text-white flex"
      onClick={[Function]}
      tabIndex={1}
    >
      item 1
      <svg
        className="self-center ml-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </li>
    <li
      className="p-1 px-2 text-[12px] my-4 rounded-2xl bg-themeBlue text-center text-white flex"
      onClick={[Function]}
      tabIndex={1}
    >
      item 2
      <svg
        className="self-center ml-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </li>
  </ul>
</div>
`;

exports[`CustomList snapshot test with clear all 1`] = `
<div
  className="flex gap-2 items-center"
>
  <div>
    Custom list:
  </div>
  <ul
    className="flex gap-1 flex-wrap"
  >
    <li
      className="p-1 px-2 text-[12px] my-4 rounded-2xl bg-themeBlue text-center text-white flex"
      onClick={[Function]}
      tabIndex={1}
    >
      item 1
      <svg
        className="self-center ml-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </li>
    <li
      className="p-1 px-2 text-[12px] my-4 rounded-2xl bg-themeBlue text-center text-white flex"
      onClick={[Function]}
      tabIndex={1}
    >
      item 2
      <svg
        className="self-center ml-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </li>
  </ul>
  <div
    className="flex text-[#1560bd] cursor-pointer"
    data-testId="clearAllButton"
    onClick={[Function]}
    tabIndex={1}
  >
    Clear all
  </div>
</div>
`;
